--- a/views/admin/account/admin-account.hbs
+++ b/views/admin/account/admin-account.hbs
@@ -93,160 +93,156 @@
 
                 </table>
 
-                <div class="clearfix">
-                    <div class="hint-text">showing <b>5</b> out of <b>25</b></div>
-                    <ul class="pagination">
-                        <li class="page-item disabled"><a href="#">Previous</a></li>
-                        <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                        <li class="page-item "><a href="#" class="page-link">2</a></li>
-                        <li class="page-item "><a href="#" class="page-link">3</a></li>
-                        <li class="page-item "><a href="#" class="page-link">4</a></li>
-                        <li class="page-item "><a href="#" class="page-link">5</a></li>
-                        <li class="page-item "><a href="#" class="page-link">Next</a></li>
-                    </ul>
+                <div class="pagination">
+                    <a id="prev_page" href="/admin/account?page={{prevPage}}">
+                        < </a>
+                            {{#each pages}}
+                            <a id="{{this}}" href="/admin/account?page={{this}}"
+                                class="{{#if (eq this ../currentPage)}}active{{/if}}">{{this}}</a>
+                            {{/each}}
+                            <a id="next_page" href="/admin/account?page={{nextPage}}"> > </a>
                 </div>
             </div>
+
+
+            <!--add-modal start--->
+            <div class="modal fade" tabindex="-1" id="addEmployeeModal" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Add Employees</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="emil" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Address</label>
+                                <textarea class="form-control" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label>Phone</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-success">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!----edit-modal end--------->
+            <!----edit-modal start--------->
+            <form class="modal fade" tabindex="-1" id="editAccount" role="dialog"
+                action="/account/edit/{{this._id}}?_method=PUT" method="POST">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Edit Employees</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="emil" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Address</label>
+                                <textarea class="form-control" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label>Phone</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-success">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <form name="delete-course-form" method="POST"></form>
+            <!----edit-modal end--------->
+            <!----delete-modal start--------->
+            <div class="modal fade" tabindex="-1" id="deleteAccount" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Delete Employees</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this Records</p>
+                            <p class="text-warning"><small>this action Cannot be Undone,</small></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-success">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--edit-modal end-->
+            <footer class="footer">
+                <div class="container-fluid">
+                    <div class="footer-in">
+                        <p class="mb-0"></p>
+                    </div>
+                </div>
+            </footer>
+
+
+
         </div>
-
-
-        <!--add-modal start--->
-        <div class="modal fade" tabindex="-1" id="addEmployeeModal" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Add Employees</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="emil" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Address</label>
-                            <textarea class="form-control" required></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-success">Add</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!----edit-modal end--------->
-        <!----edit-modal start--------->
-        <form class="modal fade" tabindex="-1" id="editAccount" role="dialog"
-            action="/account/edit/{{this._id}}?_method=PUT" method="POST">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Edit Employees</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="emil" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Address</label>
-                            <textarea class="form-control" required></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-success">Save</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-        <form name="delete-course-form" method="POST"></form>
-        <!----edit-modal end--------->
-        <!----delete-modal start--------->
-        <div class="modal fade" tabindex="-1" id="deleteAccount" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Delete Employees</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Are you sure you want to delete this Records</p>
-                        <p class="text-warning"><small>this action Cannot be Undone,</small></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-success">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--edit-modal end-->
-        <footer class="footer">
-            <div class="container-fluid">
-                <div class="footer-in">
-                    <p class="mb-0"></p>
-                </div>
-            </div>
-        </footer>
-
-
-
     </div>
-</div>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $(".xp-menubar").on('click', function () {
-            $("#sidebar").toggleClass('active');
-            $("#content").toggleClass('active');
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".xp-menubar").on('click', function () {
+                $("#sidebar").toggleClass('active');
+                $("#content").toggleClass('active');
+            });
+
+            $('.xp-menubar,.body-overlay').on('click', function () {
+                $("#sidebar,.body-overlay").toggleClass('show-nav');
+            });
+
         });
 
-        $('.xp-menubar,.body-overlay').on('click', function () {
-            $("#sidebar,.body-overlay").toggleClass('show-nav');
+        document.addEventListener('DOMContentLoaded', function () {
+            var courseId;
+            var deleteForm = document.forms['delete-course-form'];
+            var btnDeleteCourse = document.getElementById('btn btn-success');
+
+            // When dialog confirm clicked
+            $('#editAccount').on('show.bs.modal', function (event) {
+                var button = $(event.relatedTarget);
+                courseId = button.data('id');
+                console.log(courseId);
+            });
+
+            // When delete course btn clicked
+            btnDeleteCourse.onclick = function () {
+                deleteForm.action = 'admin/account/edit/' + courseId + '?_method=PUT';
+                deleteForm.submit
+            }
         });
 
-    });
-
-    document.addEventListener('DOMContentLoaded', function () {
-        var courseId;
-        var deleteForm = document.forms['delete-course-form'];
-        var btnDeleteCourse = document.getElementById('btn btn-success');
-
-        // When dialog confirm clicked
-        $('#editAccount').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget);
-            courseId = button.data('id');
-            console.log(courseId);
-        });
-
-        // When delete course btn clicked
-        btnDeleteCourse.onclick = function () {
-            deleteForm.action = 'admin/account/edit/' + courseId + '?_method=PUT';
-            deleteForm.submit
-        }
-    });
-
-</script>
+    </script>
