--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -906,7 +906,7 @@
 </div>
 <div id="data-cart" class="cart-menu">
     <div class="wrap">
-        <a href="" class="close-trigger" close-button><i class="ri-close-line"></i></a>
+        <a href="" class="close-trigger active" close-button><i class="ri-close-line"></i></a>
         <div class="scrollto cart-outer">
             <div class="wrapper">
                 <div class="cart-list">
