--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,3 @@
-
 <style>
     @import url(/stylesheets/category.css);
 </style>
@@ -14,13 +13,13 @@
             <a class="link" href="#"> <i class="fas fa-angle-right"></i>Tutor</a>
             <a class="link" href="#services"> <i class="fas fa-angle-right"></i>News & Blog</a>
             <a class="link" href="#contact"> <i class="fas fa-angle-right"></i> Contact</a>
-           
+
         </div>
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#" class="link"> <i class="fas fa-phone"></i>0942492722</a>
-            <a href="#" class="link"> <i class="fas fa-envelope"></i> lynhathao.it@gmail.com </a>
+            <a href="#" class="link"> <i class="fas fa-phone"></i>0123456789</a>
+            <a href="#" class="link"> <i class="fas fa-envelope"></i> TUSteam.it@gmail.com </a>
             <a href="#" class="link"> <i class="fas fa-map"></i>227 Nguyễn Văn Cừ, District 5, HCMC</a>
         </div>
 
@@ -31,12 +30,11 @@
                 <input type="email" name="" placeholder="enter your email address" id="" class="email">
                 <input type="submit" value="subscribe" class="btn">
             </form>
-            {{!-- <div class="share">
-                <a href="https://www.facebook.com/LNH.1105" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div> --}}
+            <div class="share">
+                <a href="https://www.facebook.com/bach0807/" class="fab fa-facebook-f"></a>
+                <a href="https://www.instagram.com/nauxbachh/" class="fab fa-instagram"></a>
+                <a href="https://github.com/PUPMKINN/MyShopping" class="fab fa-github"></a>
+            </div>
         </div>
 
     </div>
