--- a/views/partials/headerUser.hbs
+++ b/views/partials/headerUser.hbs
@@ -6,15 +6,12 @@
 
     <div class="contact-info">
         <p> <i class="fas fa-map-marker-alt"></i>227 Nguyễn Văn Cừ, District 5, HCMC</p>
-        <p> <i class="fas fa-envelope"></i>lynhathao.it@gmail.com</p>
+        <p> <i class="fas fa-envelope"></i>TUSteam.it@gmail.com</p>
         <p> <i class="fas fa-clock"></i>24/7
             <a href="https://instagram.com/nauxbachh/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/bach0807/"><i class="fab fa-facebook"></i></a>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-pinterest"></i>
-            </i>
+            <a href="https://github.com/PUPMKINN/MyShopping"></a><i class="fab fa-github"></i>
         </p>
-
     </div>
 
 
