--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -312,15 +312,15 @@ input.checker:checked::after {
 .overlay {
     background-color: var(--dark-color);
     opacity: 0;
-    visibility: hidden !important;
-    pointer-events: none !important;
+    visibility: hidden;
+    pointer-events: none;
     z-index: 999;
     transition: opacity .3s, visibility .3s;
 }
 
 .overlay.active {
     opacity: .75;
-    /* visibility: hidden; */
+    /* visibility: visible; */
     pointer-events: all;
 }
 
@@ -871,8 +871,7 @@ input.checker:checked::after {
     padding-left: 15px;
     margin-top: 20px;
     height: 230px;
-}
-
+} */
 
 input[type="range"] {
     --webkit-appearance: none;
@@ -901,16 +900,6 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -7px;
-}
-
-.rangeValues {
-    display: block;
-    background-color: #212121;
-    color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    font-size: 15px;
-    margin-bottom: 35px;
 }
 
 .sidebar .price-range {
@@ -1284,146 +1273,349 @@ i.ri-star-fill {
     .heading {
         font-size: 3rem;
     }
-
-    nav.menu :where(.sub-menu, .sub-mega) {
-        position: absolute;
-        top: auto;
-        line-height: initial;
-        background-color: var(--white-color);
-        box-shadow: var(--shadow);
-        z-index: 1000;
-        display: none;
-        animation: var(--fade);
-    }
-
-    nav.menu li:hover :where(.sub-menu, .sub-mega) {
-        display: block;
-    }
-
-    nav.menu .sub-menu {
-        padding: 10px 0;
-    }
-
-
-    nav.menu .sub-menu li {
-        padding: 5px 30px;
-    }
-
-    /*slider*/
-    .slider .ob-cover {
-        height: calc(100vh - 80px);
-    }
-
-    .slider .title-info {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: transparent;
-    }
-
-    .slider h3 {
-        --fs-max: 80px;
-        color: var(--white-color);
-    }
-
-    .slider .button a {
-        border-color: var(--white-color);
-        color: var(--white-color);
-    }
-
-    .slider .button a:hover {
-        border-color: var(--dark-color);
-    }
-
-    .carousel .dotgrid .item {
-        width: 270px;
-    }
-
-    .scrollto .wrapper:not(.initial) {
-        --display: grid;
-        padding: 0;
-        overflow: unset;
-        scroll-snap-type: unset;
-        overscroll-behavior-inline: unset;
-    }
-
-    .scrollto .wrapper .item {
-        width: unset;
-    }
-
-    .inner-footer .wrap>div {
-        flex-flow: nowrap;
-    }
-
-    /*category*/
-    .page-category .content {
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        gap: 60px;
-    }
-
-    .sidebar-title,
-    .sidebar-content {
-        padding: 0;
-    }
-
-    .sidebar,
-    .sidebar>.wrap {
-        all: unset;
-    }
-
-
-}
-
-@media (max-width: 600px) {
-    /* .carousel .dotgrid .item {
-        width: 270px;
-    } */
 }
 
 
 
+/* Header */
 
-@media(min-width: 1200px) {
-    .container.wide {
-        --mx-width: 1720px;
-        --gutter: 40px;
-    }
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap");
+
+* {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
 }
 
-@media (min-width: 1400px) {
-    .mega-content {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .carousel .inner-wrapper {
-        max-width: 1250px;
-        margin: 0 auto;
-        padding: 0 40px;
-    }
-
-    .carousel .nav>.swiper-button-next {
-        right: -40px;
-    }
-
-    .carousel .nav>.swiper-button-prev {
-        left: -40px;
-    }
-
-    .product .outer-main {
-        width: 100%;
-        margin: 0;
-    }
-
-    .product .image .outer-thumb {
-        position: absolute;
-        top: 0;
-        left: -100px;
-        height: 100%;
-    }
-
-    .product.dotgrid .image {
-        overflow: unset;
-    }
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
 }
+
+html::-webkit-scrollbar {
+    width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #40DDB6;
+    border-radius: 5rem;
+}
+
+section {
+    padding: 5rem 10%;
+}
+
+.heading {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 4rem;
+    text-transform: capitalize;
+    color: #334;
+}
+
+.heading span {
+    color: #40DDB6;
+}
+
+a.btn {
+    font-weight: 900;
+}
+
+
+h4 {
+    font-size: 80px;
+    color: #40DDB6;
+    font-family: ui-monospace;
+}
+
+
+
+.btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+
+    font-size: 1.7rem;
+    text-transform: capitalize;
+    color: #000000;
+
+    border-radius: 15px;
+}
+
+.frame {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem rem;
+    cursor: pointer;
+    background: #fff;
+    font-size: 1.7rem;
+    text-transform: capitalize;
+    color: #000000;
+    border: 0.2rem solid rgb(215, 215, 228);
+    border-radius: 5px;
+}
+
+
+.btn:hover {
+    background: #40DDB6;
+    border-color: #40DDB6;
+    color: #000000;
+}
+
+.header .contact-info {
+    padding: 2rem 8%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    background: #37393F;
+}
+
+.header .contact-info p {
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.header .contact-info p i {
+    padding-right: .5rem;
+    color: #40DDB6;
+}
+
+.header .navbar {
+    padding: 2rem 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    background: #fff;
+    border-bottom: 0.2rem solid #334;
+    position: relative;
+    z-index: 1000;
+}
+
+.header .navbar.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: none;
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.header .navbar .logo {
+    font-size: 2.5rem;
+    text-transform: capitalize;
+    color: #334;
+    font-weight: bolder;
+}
+
+.header .navbar .logo i {
+    color: #40DDB6;
+}
+
+.header .navbar .links a {
+    margin-left: 2rem;
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: #334;
+}
+
+.header .navbar .links a:hover {
+    /* text-decoration: underline; */
+    color: #000000;
+}
+
+i.fas.fa-play-circle {
+    font-size: 25px;
+    margin-left: 25px;
+}
+
+.header #menu-btn {
+    font-size: 3rem;
+    cursor: pointer;
+    color: #334;
+    display: none;
+}
+
+
+
+.footer {
+    background: #f5f5f5;
+}
+
+.footer .box-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 2rem;
+}
+
+.footer .box-container .box h3 {
+    font-size: 2.2rem;
+    text-transform: capitalize;
+    color: #334;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box .link {
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #777;
+}
+
+.footer .box-container .box .link i {
+    padding-right: .5rem;
+    color: #40DDB6;
+}
+
+.footer .box-container .box .link:hover {
+    color: #40DDB6;
+}
+
+.footer .box-container .box .link:hover i {
+    padding-right: 2rem;
+}
+
+.footer .box-container .box p {
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #777;
+}
+
+.footer .box-container .box p span {
+    color: #40DDB6;
+}
+
+.footer .box-container .box .email {
+    width: 100%;
+    border: 0.2rem solid #334;
+    padding: 1.6rem 1.4rem;
+    font-size: 1.6rem;
+    color: #777;
+    margin: 1rem 0;
+}
+
+.footer .box-container .box .share {
+    margin-top: 2rem;
+}
+
+.footer .box-container .box .share a {
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    background: #334;
+    color: #fff;
+    margin-right: .3rem;
+    text-align: center;
+}
+
+.footer .box-container .box .share a:hover {
+    background: #40DDB6;
+}
+
+.footer .credit {
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: #334;
+    margin-top: 3rem;
+    padding-top: 3rem;
+    border-top: 0.2rem solid #334;
+    text-align: center;
+}
+
+.footer .credit span {
+    color: #40DDB6;
+}
+
+.input-box {
+    position: relative;
+   
+    max-width: 900px;
+    width: 100%;
+    background: #fff;
+    margin: 0 20px;
+    border-radius: 8px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    padding: 1.5rem 2rem 1.5rem 0;
+    margin-top: 12px;
+}
+
+.input-box i,
+.input-box .button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#sort_selection {
+    font-size: 20px;
+    padding: 8px 15px;
+    border-radius: 8px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.input-box i {
+    left: 20px;
+    font-size: 30px;
+    color: #707070;
+}
+
+.input-box input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    padding: 0 0px 0 65px;
+    background-color: transparent;
+}
+
+.input-box .button {
+    right: 20px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+    border: none;
+    padding: 12px 30px;
+    border-radius: 6px;
+    background-color: #4070f4;
+    cursor: pointer;
+}
+
+.input-box .button:active {
+    transform: translateY(-50%) scale(0.98);
+}
+
+
+
