--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -73,9 +73,7 @@
                         <div class="text-data pd-20-0">Or you can join with</div>
 
                         <div class="login-other-method">
-                            <img src="assets/img/icons8-google-48.png" alt=""><a href="#"></a></img><img
-                                src="assets\img\icons8-facebook-48.png" alt=""><a href="#"></a></img><img
-                                src="assets\img\icons8-twitter-circled-48.png" alt=""><a href="#"></a></img>
+                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="/auth/google"></a></img>
                         </div>
                     </div>
 
@@ -241,6 +239,9 @@
                 alert("Login failed");
                 console.error('Login failed', error);
             }
+        }
+        async function google() {
+            window.location.href = '/auth/google';
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
