--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     outline: none;
     border: none;
-    text-decoration: none;
+    text-decoration: none !important;
     -webkit-transition: all .2s linear;
     transition: all .2s linear;
 
@@ -74,6 +74,48 @@ h4 {
     color: #000000;
     border: 0.2rem solid #334;
     border-radius: 15px;
+}
+
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background-color: #37393F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s;
+}
+
+.video-container .close {
+    position: absolute;
+    top: 10%;
+    right: 25px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.video-container video {
+    width: 90%;
+    max-width: 800px;
+    transform: scale(0);
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+    outline: none;
+    transition: all 0.3s;
+}
+
+.video-container.show {
+    pointer-events: none;
+    opacity: 1;
+}
+
+.video-container.show video {
+    transform: scale(1);
 }
 
 .frame {
