--- a/views/tutormode/createcourse.hbs
+++ b/views/tutormode/createcourse.hbs
@@ -13,7 +13,7 @@
         <h3 class="wrapper-header">
             <a href=""><i class="ri-arrow-right-s-fill"></i> Create courses</a>
             <br>
-         
+
         </h3>
         <form action="">
             <p class="wrapper-input">
@@ -60,11 +60,15 @@
             </p>
 
             <p class="wrapper-input">
+                <label for="discount">Price:</label>
+                <input type="text" id="discount" name="discount" placeholder="Enter after discount" check required>
+            </p>
+
+            <p class="wrapper-input">
                 <label for="description">Description:</label>
                 <input type="text" id="description" name="description" placeholder="Enter your description about course"
                     check required>
             </p>
-
             <p class="wrapper-input">
                 <button class="btn" id="btn-submit" type="submit">Create Course</button>
             </p>
@@ -113,18 +117,14 @@
 
         const curUrl = new URL(window.location.href);
         let isError = false;
-
-       
-
-      
         const formData = {
             'name': $('#subject').value,
             'schedule': $('#schedule').value,
             'faculty': $('#faculty').value,
             'studentCourse': $('#school').value,
             'price': $('#price').value,
+            'discount': $('#discount').value,
             'description': $('#description').value,
-
         };
         console.log(formData);
         console.log($('#price').value);
@@ -139,14 +139,14 @@
             if (!response.ok) {
                 isError = true;
             }
-           
+
             return response.json();
         })
             .then(data => {
                 if (isError == true) {
                     alert(data.error)
                 } else {
-                  
+
 
                     const alertReview = $('.alert-success')
                     alertReview.innerHTML = `${data.msg}`
