--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -49,8 +49,8 @@ ul {
     font-size: 20px;
 }
 
-span {
-    font-size: 15px !important;
+p {
+    font-size: 15px;
 }
 
 
@@ -1348,7 +1348,7 @@ h4 {
     margin-top: 1rem;
     padding: 1rem 3rem;
     cursor: pointer;
-
+    background: #40DDB6;
     font-size: 1.7rem;
     text-transform: capitalize;
     color: #000000;
