--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -211,8 +211,8 @@
                                                         <i class="ri-star-fill"></i>
 
                                                         <div class="product-price">
-                                                            <span class="before"> {{this.price}}VNĐ</span>
-                                                            <span class="current">{{this.discount}}VNĐ</span>
+                                                            <p class="before"> {{this.price}}VNĐ</p>
+                                                            <p class="current">{{this.discount}}VNĐ</p>
                                                         </div>
                                                 </div>
                                             </div>
