--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -22,7 +22,7 @@
             Students
         </h3>
         <a href="/login" class="btn">Get consulting</a>
-        <a href="/course" class="btn">Watching List Tutor</a>
+        <a href="/courses" class="btn">List Tutor</a>
     </div>
     <div class="image">
         <img src="images/home-logo.svg" alt="">
