--- a/views/home/tutorhome.hbs
+++ b/views/home/tutorhome.hbs
@@ -21,10 +21,8 @@
         <h3>
             Students
         </h3>
-        <a href="#" class="btn">Get consulting</a>
-        <i class="fas fa-play-circle">
-            <a class="btn">Watching video</a>
-        </i>
+        <a href="/login" class="btn">Get consulting</a>
+        <a href="/courses" class="btn">List Tutor</a>
     </div>
     <div class="image">
         <img src="images/home-logo.svg" alt="">
@@ -192,7 +190,7 @@
             </div>
         </div>
         {{/each}}
-        
+
 
     </div>
 
