--- a/views/user/userMode.hbs
+++ b/views/user/userMode.hbs
@@ -15,15 +15,15 @@
             <a href="/user/profile"><i class="ri-arrow-right-s-fill"></i>Edit profile</a>
             <br>
         </h3>
-       
+
         <h3 class="wrapper-mode">
             <a href="/user/stored/courses"><i class="ri-arrow-right-s-fill"></i>Course status</a>
             <br>
         </h3>
-        
-       
+
+
         <h3 class="wrapper-log-out">
-            <a href="#" class="btn">Log out</a>
+            <a href="/logout" class="btn">Log out</a>
         </h3>
     </div>
     <div class="image">
