--- a/views/tutormode/courseDetail.hbs
+++ b/views/tutormode/courseDetail.hbs
@@ -5,6 +5,10 @@
 <style type="stylesheets">
     @import url(https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous");
 </style>
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+</style>
+
 <!-- header section starts  -->
 
 
