--- a/views/tutormode/createcourse.hbs
+++ b/views/tutormode/createcourse.hbs
@@ -1,6 +1,9 @@
 <style>
     @import url(/stylesheets/createcourse.css);
 </style>
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+</style>
 <!-- header section starts  -->
 
 
