--- a/views/tutormode/studentWaittingList.hbs
+++ b/views/tutormode/studentWaittingList.hbs
@@ -2,8 +2,12 @@
     @import url(/stylesheets/waitlist.css);
     @import url(/pagination1.css);
 </style>
+<style type="stylesheets">
+    @import url(https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous");
+</style>
+
 <style>
-    @import url('https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css');
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
 </style>
 
 
