--- a/views/tutormode/tutormode.hbs
+++ b/views/tutormode/tutormode.hbs
@@ -2,6 +2,10 @@
     @import url(/stylesheets/tutormode.css);
 </style>
 
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+</style>
+
 <!-- header section starts  -->
 
 
@@ -37,7 +41,7 @@
         </div>
 
         <h3 class="wrapper-log-out">
-            <a href="#" class="btn">Log out</a>
+            <a href="/logout" class="btn">Log out</a>
         </h3>
     </div>
     <div class="image">
