--- a/views/admin/detailTutor.hbs
+++ b/views/admin/detailTutor.hbs
@@ -30,7 +30,7 @@
             <div class="header--wrapper">
                 <div class="header--title">
                     <span>Primary</span>
-                    <h2>information Form User</h2>
+                    <h2>Information Form User</h2>
                 </div>
                 <div class="user--infor">
                     <div class="search--box">
