--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -167,19 +167,14 @@
                                     <div class="col-8 col-xl-2 col-lg-2 col-sm-8 wrapper-sort-course">
                                         <select class="form-select" id="sort_selection" aria-label="Sort Course">
                                             <option selected>Sort accounts</option>
-                                            <option value="name-asc">name course, Alphabetically, A-Z</option>
-                                            <option value="name-desc">name course, Alphabetically, Z-A</option>
-                                            <option value="tutor-asc">tutor, Alphabetically, A-Z</option>
-                                            <option value="tutor-desc">tutor, Alphabetically, Z-A</option>
-                                            <option value="price-desc">price, expensive to cheap</option>
-                                            <option value="price-asc">price, cheap to expensive</option>
+                                            <option value="name-asc">Name courses: A-Z</option>
+                                            <option value="name-desc">Name course: Z-A</option>
+                                            <option value="tutor-asc">Tutor: A-Z</option>
+                                            <option value="tutor-desc">Tutor: Z-A</option>
+                                            <option value="price-desc">Price, High to Low</option>
+                                            <option value="price-asc">Price, Low to High</option>
                                         </select>
                                     </div>
-
-
-
-
-
                                 </div>
                             </div>
                             <div class="tabbed">
