--- a/views/partials/headerUser.hbs
+++ b/views/partials/headerUser.hbs
@@ -35,7 +35,7 @@
             <div class="profile-dropdown">
                 <div onclick="toggle()" class="profile-dropdown-btn">
                     <div class="profile-img">
-                        <img src="/images/{{this.user.avatar}}" alt="">
+                        <img src="/images/{{user.avatar}}" alt="">
                     </div>
                 </div>
 
